--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -37,12 +37,10 @@
         <div class="pull-right loginbox">
             {% if request.event.settings.locales|length > 1 %}
                 <div class="locales">
-                    {% for l, langname in languages %}
-                        {% if l in request.event.settings.locales %}
-                            <a href="{% url "presale:locale.set" %}?locale={{ l }}&next={{ request.path }}%3F{{ request.META.QUERY_STRING|urlencode }}" class="{% if l == request.LANGUAGE_CODE %}active{% endif %}">
-                                {{ langname }}
-                            </a>
-                        {% endif %}
+                    {% for l in languages %}
+                        <a href="{% url "presale:locale.set" %}?locale={{ l.code }}&next={{ request.path }}%3F{{ request.META.QUERY_STRING|urlencode }}" class="{% if l.code == request.LANGUAGE_CODE %}active{% endif %}">
+                            {{ l.name_local }}
+                        </a>
                     {% endfor %}
                 </div>
             {% endif %}
