Ref #541 -- Allow delete waitinglist entries
Add new action "delete" for each waiting list entries

--- a/src/pretix/control/templates/pretixcontrol/waitinglist/index.html
+++ b/src/pretix/control/templates/pretixcontrol/waitinglist/index.html
@@ -96,6 +96,7 @@
                     <th>{% trans "On the list since" %}</th>
                     <th>{% trans "Status" %}</th>
                     <th>{% trans "Voucher" %}</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -131,6 +132,13 @@
                                 <button name="assign" value="{{ e.pk }}" class="btn btn-default btn-xs">
                                     {% trans "Send a voucher" %}
                                 </button>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if not e.voucher %}
+                                <a href="{% url "control:event.orders.waitinglist.delete" organizer=request.event.organizer.slug event=request.event.slug entry=e.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                            {% else %}
+                                <span class="btn btn-danger btn-sm disabled"><i class="fa fa-trash"></i></span>
                             {% endif %}
                         </td>
                         <td class="text-right">
