Add "Go to shop" in mobile view

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -332,3 +332,22 @@ body.loading #wrapper {
         max-width: 80%;
     }
 }
+
+.mobile-navbar-view-form {
+    float: right;
+    button {
+        position: relative;
+        margin-right: 15px;
+        padding: 6px 10px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        background-color: transparent;
+        background-image: none;
+        border: 1px solid transparent;
+        border-radius: 4px;
+    }
+}
+.mobile-navbar-view-link {
+    padding: 6px 10px;
+    color: white !important;
+}
