--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -60,6 +60,22 @@
                             data-toggle="collapse" data-target=".navbar-events-collapse">
                         <i class="fa fa-calendar"></i><span class="caret"></span>
                     </button>
+                    {% if request.event %}
+                        {% if has_domain and not request.event.live %}
+                            <form action="{% eventurl request.event "presale:event.auth" %}" method="post"
+                                    target="_blank" class="mobile-navbar-view-form visible-xs-block">
+                                <input type="hidden" value="{{ new_session }}" name="session">
+                                <button type="submit" class="btn btn-link navbar-toggle">
+                                    <i class="fa fa-eye"></i>
+                                </button>
+                            </form>
+                        {% else %}
+                            <a href="{% eventurl request.event "presale:event.index" %}" title="{% trans "Go to Shop" %}"
+                                    target="_blank" class="navbar-toggle mobile-navbar-view-link">
+                                <i class="fa fa-eye"></i>
+                            </a>
+                        {% endif %}
+                    {% endif %}
                     <a class="navbar-brand" href="{% url "control:index" %}">
                         <img src="{% static "pretixbase/img/pretix-icon.svg" %}" />
                         {{ settings.PRETIX_INSTANCE_NAME }}
