Swappable invoice renderers

--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -12,6 +12,7 @@
             {% bootstrap_field form.invoice_address_vatid layout="horizontal" %}
             {% bootstrap_field form.invoice_numbers_consecutive layout="horizontal" %}
             {% bootstrap_field form.invoice_generate layout="horizontal" %}
+            {% bootstrap_field form.invoice_renderer layout="horizontal" %}
             {% bootstrap_field form.invoice_language layout="horizontal" %}
             {% bootstrap_field form.invoice_address_from layout="horizontal" %}
             {% bootstrap_field form.invoice_introductory_text layout="horizontal" %}
