--- a/src/pretix/control/templates/pretixcontrol/event/index.html
+++ b/src/pretix/control/templates/pretixcontrol/event/index.html
@@ -1,12 +1,13 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
 {% load eventurl %}
+{% load bootstrap3 %}
 {% load staticfiles %}
 {% block title %}{{ request.event.name }}{% endblock %}
 {% block content %}
-<h1>
-    {{ request.event.name }}            
-</h1>
+    <h1>
+        {{ request.event.name }}
+    </h1>
     {% if actions|length > 0 %}
         <div class="panel panel-danger">
             <div class="panel-heading">
@@ -19,10 +20,12 @@
                     <li class="list-group-item logentry">
                         <p>
                             <a href="{% url "control:event.requiredaction.discard" event=request.event.slug organizer=request.event.organizer.slug id=action.id %}"
-                                    class="btn btn-default btn-xs pull-right">
+                               class="btn btn-default btn-xs pull-right">
                                 {% trans "Hide message" %}
                             </a>
-                            <small><span class="fa fa-clock-o"></span> {{ action.datetime|date:"SHORT_DATETIME_FORMAT" }}</small>
+                            <small><span
+                                    class="fa fa-clock-o"></span> {{ action.datetime|date:"SHORT_DATETIME_FORMAT" }}
+                            </small>
                         </p>
                         {{ action.display|safe }}
                     </li>
@@ -57,6 +60,28 @@
     </div>
 
     <p>&nbsp;</p>
+    <div class="panel panel-default items">
+        <div class="panel-heading">
+            <h3 class="panel-title">
+                {% trans "Internal comment" %}
+            </h3>
+        </div>
+        <div class="panel-body">
+            <form class="form" method="post"
+                  action="{% url "control:event.comment" event=request.event.slug organizer=request.event.organizer.slug %}">
+                {% csrf_token %}
+                <div class="row">
+                    {% bootstrap_field comment_form.comment layout="horizontal" show_help=True show_label=False horizontal_field_class="col-md-12" %}
+                </div>
+                <p class="text-right">
+                    <br>
+                    <button class="btn btn-default">
+                        {% trans "Update comment" %}
+                    </button>
+                </p>
+            </form>
+        </div>
+    </div>
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">
@@ -74,8 +99,8 @@
                             {% if log.user %}
                                 {% if log.user.is_superuser %}
                                     <span class="fa fa-id-card fa-danger fa-fw"
-                                            data-toggle="tooltip"
-                                            title="{% trans "This change was performed by a pretix administrator." %}">
+                                          data-toggle="tooltip"
+                                          title="{% trans "This change was performed by a pretix administrator." %}">
                                 </span>
                                 {% else %}
                                     <span class="fa fa-user fa-fw"></span>
