List of events: Optional calendar view

--- a/src/pretix/control/templates/pretixcontrol/organizers/edit.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/edit.html
@@ -21,6 +21,7 @@
             {% bootstrap_field sform.locales layout="horizontal" %}
             {% bootstrap_field sform.organizer_logo_image layout="horizontal" %}
             {% bootstrap_field sform.organizer_homepage_text layout="horizontal" %}
+            {% bootstrap_field sform.event_list_type layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
