--- a/src/pretix/static/pretixpresale/scss/main.scss
+++ b/src/pretix/static/pretixpresale/scss/main.scss
@@ -6,6 +6,7 @@
 @import "_event.scss";
 @import "_cart.scss";
 @import "_forms.scss";
+@import "_calendar.scss";
 @import "../../pretixbase/scss/webfont.scss";
 
 footer {
