Calendar fixes and month selection

--- a/src/pretix/presale/templates/pretixpresale/organizers/calendar.html
+++ b/src/pretix/presale/templates/pretixpresale/organizers/calendar.html
@@ -10,22 +10,40 @@
         {% endif %}
     </div>
     <h3 class="text-center">{{ date|date:"F Y" }}</h3>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="{% eventurl request.organizer "presale:organizer.calendar" year=before.year month=before.month %}"
-               class="btn btn-default">
-                <span class="fa fa-arrow-left"></span>
-                {{ before|date:"F Y" }}
-            </a>
+    <form class="form-inline" method="get" id="monthselform" action="{% eventurl request.organizer "presale:organizer.calendar" %}">
+        <div class="row">
+            <div class="col-sm-4">
+                <a href="{% eventurl request.organizer "presale:organizer.calendar" year=before.year month=before.month %}"
+                        class="btn btn-default">
+                    <span class="fa fa-arrow-left"></span>
+                    {{ before|date:"F Y" }}
+                </a>
+            </div>
+            <div class="col-sm-4 text-center">
+                <select name="month" class="form-control">
+                    {% for m in months %}
+                        <option value="{{ m|date:"m" }}" {% if m == date %}selected{% endif %}>{{ m|date:"F" }}</option>
+                    {% endfor %}
+                </select>
+                <select name="year" class="form-control">
+                    {% for y in years %}
+                        <option value="{{ y }}" {% if y == date.year %}selected{% endif %}>{{ y }}</option>
+                    {% endfor %}
+                </select>
+                <button type="submit" class="js-hidden btn btn-default">
+                    {% trans "Go" %}
+                </button>
+            </div>
+            <div class="col-sm-4 text-right">
+                <a href="{% eventurl request.organizer "presale:organizer.calendar" year=after.year month=after.month %}"
+                        class="btn btn-default">
+                    <span class="fa fa-arrow-right"></span>
+                    {{ after|date:"F Y" }}
+                </a>
+            </div>
         </div>
-        <div class="col-sm-6 text-right">
-            <a href="{% eventurl request.organizer "presale:organizer.calendar" year=after.year month=after.month %}"
-               class="btn btn-default">
-                <span class="fa fa-arrow-right"></span>
-                {{ after|date:"F Y" }}
-            </a>
-        </div>
-    </div>
+    </form>
+
     {% include "pretixpresale/fragment_calendar.html" %}
     {% if multiple_timezones %}
         <div class="alert alert-info">
