--- a/src/pretix/presale/templates/pretixpresale/organizers/calendar.html
+++ b/src/pretix/presale/templates/pretixpresale/organizers/calendar.html
@@ -12,14 +12,14 @@
     <h3 class="text-center">{{ date|date:"F Y" }}</h3>
     <form class="form-inline" method="get" id="monthselform" action="{% eventurl request.organizer "presale:organizer.calendar" %}">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 hidden-xs">
                 <a href="{% eventurl request.organizer "presale:organizer.calendar" year=before.year month=before.month %}"
                         class="btn btn-default">
                     <span class="fa fa-arrow-left"></span>
                     {{ before|date:"F Y" }}
                 </a>
             </div>
-            <div class="col-sm-4 text-center">
+            <div class="col-sm-4 col-xs-12 text-center">
                 <select name="month" class="form-control">
                     {% for m in months %}
                         <option value="{{ m|date:"m" }}" {% if m == date %}selected{% endif %}>{{ m|date:"F" }}</option>
@@ -34,7 +34,7 @@
                     {% trans "Go" %}
                 </button>
             </div>
-            <div class="col-sm-4 text-right">
+            <div class="col-sm-4 hidden-xs text-right">
                 <a href="{% eventurl request.organizer "presale:organizer.calendar" year=after.year month=after.month %}"
                         class="btn btn-default">
                     <span class="fa fa-arrow-right"></span>
