--- a/src/pretix/static/pretixpresale/scss/_calendar.scss
+++ b/src/pretix/static/pretixpresale/scss/_calendar.scss
@@ -33,4 +33,20 @@
       background: darken($brand-primary, 15%);
     }
   }
+  .selected-day {
+    display: none;
+  }
+}
+@media (max-width: $screen-xs-max) {
+  .table-calendar .day .events {
+    display: none;
+  }
+  .table-calendar td.day.has-events {
+    background: $brand-primary;
+    cursor: pointer;
+    color: white;
+  }
+  .table-calendar td.day.has-events:hover {
+    background: darken($brand-primary, 15%);
+  }
 }
