Typo in last commit
Fixed typo in last commit

--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -33,7 +33,7 @@
     {% if event %}
         {% autoescape off %}
         <script type="application/ld+json">
-            {{ event.get_event_microdata }}
+            {{ event.event_microdata }}
         </script>
     {   % endautoescape %}
     {% endif %}
