--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -24,7 +24,7 @@
                 <a href="{% url 'control:event.subevents' organizer=request.event.organizer.slug event=request.event.slug %}"
                         {% if "event.subevent" in url_name %}class="active"{% endif %}>
                     <i class="fa fa-calendar fa-fw"></i>
-                    {% trans "Sub-events" %}
+                    {% trans "Dates" context "subevent" %}
                 </a>
             </li>
         {% endif %}
