--- a/src/pretix/control/templates/pretixcontrol/items/quotas.html
+++ b/src/pretix/control/templates/pretixcontrol/items/quotas.html
@@ -17,7 +17,7 @@
             <p>
                 {% if request.event.has_subevents %}
                     <select name="subevent" class="form-control">
-                        <option value="">{% trans "All sub-events" %}</option>
+                        <option value="">{% trans "All dates" context "subevent" %}</option>
                         {% for se in request.event.subevents.all %}
                             <option value="{{ se.id }}"
                                     {% if request.GET.subevent|add:0 == se.id %}selected="selected"{% endif %}>
@@ -57,7 +57,7 @@
                     <th>{% trans "Quota name" %}</th>
                     <th>{% trans "Products" %}</th>
                     {% if request.event.has_subevents %}
-                        <th>{% trans "Sub-event" %}</th>
+                        <th>{% trans "Date" context "subevent" %}</th>
                     {% endif %}
                     <th>{% trans "Total capacity" %}</th>
                     <th>{% trans "Capacity left" %}</th>
