--- a/src/pretix/control/templates/pretixcontrol/subevents/delete.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/delete.html
@@ -1,12 +1,12 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
-{% block title %}{% trans "Delete sub-event" %}{% endblock %}
+{% block title %}{% trans "Delete date" context "subevent" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Delete sub-event" %}</h1>
+    <h1>{% trans "Delete date" context "subevent" %}</h1>
     <form action="" method="post" class="form-horizontal">
         {% csrf_token %}
-        <p>{% blocktrans %}Are you sure you want to delete the subevent <strong>{{ subevent }}</strong>?{% endblocktrans %}</p>
+        <p>{% blocktrans %}Are you sure you want to delete the date <strong>{{ subevent }}</strong>?{% endblocktrans %}</p>
         <div class="form-group submit-group">
             <a href="{% url "control:event.vouchers" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
                 {% trans "Cancel" %}
