--- a/src/pretix/control/templates/pretixcontrol/vouchers/index.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/index.html
@@ -22,7 +22,7 @@
             </select>
             {% if request.event.has_subevents %}
                 <select name="subevent" class="form-control">
-                    <option value="">{% trans "All sub-events" %}</option>
+                    <option value="">{% trans "All dates" context "subevent" %}</option>
                     {% for se in request.event.subevents.all %}
                         <option value="{{ se.id }}"
                                 {% if request.GET.subevent|add:0 == se.id %}selected="selected"{% endif %}>
@@ -70,7 +70,7 @@
                     <th>{% trans "Tag" %}</th>
                     <th>{% trans "Product" %}</th>
                     {% if request.event.has_subevents %}
-                        <th>{% trans "Sub-event" %}</th>
+                        <th>{% trans "Date" context "subevent" %}</th>
                     {% endif %}
                     <th></th>
                 </tr>
