--- a/src/pretix/control/templates/pretixcontrol/waitinglist/index.html
+++ b/src/pretix/control/templates/pretixcontrol/waitinglist/index.html
@@ -43,7 +43,7 @@
                         {% endif %}
                         {% if request.event.has_subevents %}
                             <select name="subevent" class="form-control">
-                                <option value="">{% trans "All sub-events" %}</option>
+                                <option value="">{% trans "All dates" context "subevent" %}</option>
                                 {% for se in request.event.subevents.all %}
                                     <option value="{{ se.id }}"
                                             {% if request.GET.subevent|add:0 == se.id %}selected="selected"{% endif %}>
@@ -95,7 +95,7 @@
         </select>
         {% if request.event.has_subevents %}
             <select name="subevent" class="form-control">
-                <option value="">{% trans "All sub-events" %}</option>
+                <option value="">{% trans "All dates" context "subevent" %}</option>
                 {% for se in request.event.subevents.all %}
                     <option value="{{ se.id }}"
                             {% if request.GET.subevent|add:0 == se.id %}selected="selected"{% endif %}>
@@ -116,7 +116,7 @@
                     <th>{% trans "User" %}</th>
                     <th>{% trans "Product" %}</th>
                     {% if request.event.has_subevents %}
-                        <th>{% trans "Sub-event" %}</th>
+                        <th>{% trans "Date" context "subevent" %}</th>
                     {% endif %}
                     <th>{% trans "On the list since" %}</th>
                     <th>{% trans "Status" %}</th>
