--- a/src/pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html
+++ b/src/pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html
@@ -34,7 +34,7 @@
             <p>
                 {% if request.event.has_subevents %}
                     <select name="subevent" class="form-control">
-                        <option value="">{% trans "Choose sub-event" %}</option>
+                        <option value="">{% trans "Choose date" context "subevent" %}</option>
                         {% for se in request.event.subevents.all %}
                             <option value="{{ se.id }}"
                                     {% if request.GET.subevent|add:0 == se.id %}selected="selected"{% endif %}>
