--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -39,6 +39,9 @@
                 {% blocktrans asvar title_order_canceled %}Order canceled{% endblocktrans %}
                 {% include "pretixcontrol/event/mail_settings_fragment.html" with pid="order_canceled" title=title_order_canceled items="mail_text_order_canceled" %}
 
+                {% blocktrans asvar title_order_custom_mail %}Order custom mail{% endblocktrans %}
+                {% include "pretixcontrol/event/mail_settings_fragment.html" with pid="custom_mail" title=title_order_custom_mail items="mail_text_order_custom_mail" %}
+
             </div>
         </fieldset>
         <fieldset>
