Typos and translation

--- a/src/pretix/control/templates/pretixcontrol/orders/overview.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/overview.html
@@ -33,8 +33,8 @@
     {% if subevent_warning %}
         <div class="alert alert-info">
             {% blocktrans trimmed context "subevent" %}
-                If you select a sub-event, payment method fees will not be listed here as it might not be clear which
-                sub-event they belong to.
+                If you select a single date, payment method fees will not be listed here as it might not be clear which
+                date they belong to.
             {% endblocktrans %}
         </div>
     {% endif %}
