Fix #407 -- Integrate more Stripe payment methods

--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="form-horizontal">
+<div class="form-horizontal stripe-container">
     <div class="stripe-errors sr-only">
 
     </div>
