--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form_stripe_checkout.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form_stripe_checkout.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="form-horizontal" id="stripe-checkout">
+<div class="form-horizontal stripe-container" id="stripe-checkout">
     <noscript>
         <div class="alert alert-warning">
             {% trans "For a credit card payment, please turn on JavaScript." %}
