--- a/src/pretix/control/templates/pretixcontrol/item/addons.html
+++ b/src/pretix/control/templates/pretixcontrol/item/addons.html
@@ -47,6 +47,7 @@
                             {% bootstrap_field form.addon_category layout='horizontal' %}
                             {% bootstrap_field form.min_count layout='horizontal' %}
                             {% bootstrap_field form.max_count layout='horizontal' %}
+                            {% bootstrap_field form.price_included layout='horizontal' %}
                         </div>
                     </div>
                 {% endfor %}
@@ -78,6 +79,7 @@
                             {% bootstrap_field formset.empty_form.addon_category layout='horizontal' %}
                             {% bootstrap_field formset.empty_form.min_count layout='horizontal' %}
                             {% bootstrap_field formset.empty_form.max_count layout='horizontal' %}
+                            {% bootstrap_field formset.empty_form.price_included layout='horizontal' %}
                         </div>
                     </div>
                 {% endescapescript %}
