Allow to exclude free products from invoices

--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -14,6 +14,7 @@
             {% bootstrap_field form.invoice_generate layout="horizontal" %}
             {% bootstrap_field form.invoice_renderer layout="horizontal" %}
             {% bootstrap_field form.invoice_language layout="horizontal" %}
+            {% bootstrap_field form.invoice_include_free layout="horizontal" %}
             {% bootstrap_field form.invoice_address_from layout="horizontal" %}
             {% bootstrap_field form.invoice_introductory_text layout="horizontal" %}
             {% bootstrap_field form.invoice_additional_text layout="horizontal" %}
