Allow ticket output methods to opt-out from ZIP generation

--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -73,14 +73,16 @@
                     You can download your tickets using the buttons below. Please have your ticket ready when entering the event.
                 {% endblocktrans %}
             </div>
-            {% if cart.positions|length > 1 %}
+            {% if cart.positions|length > 1 and can_download_multi %}
                 <p>
                     {% trans "Download all tickets at once:" %}
                     {% for b in download_buttons %}
-                        <a href="{% eventurl event "presale:event.order.download.combined" secret=order.secret order=order.code output=b.identifier %}"
-                                class="btn btn-default btn-sm" data-asyncdownload>
-                            <span class="fa fa-download"></span> {{ b.text }}
-                        </a>
+                        {% if b.multi %}
+                            <a href="{% eventurl event "presale:event.order.download.combined" secret=order.secret order=order.code output=b.identifier %}"
+                                    class="btn btn-default btn-sm" data-asyncdownload>
+                                <span class="fa fa-download"></span> {{ b.text }}
+                            </a>
+                        {% endif %}
                     {% endfor %}
                 </p>
             {% endif %}
