--- a/src/pretix/control/templates/pretixcontrol/subevents/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/detail.html
@@ -26,6 +26,7 @@
                     {% bootstrap_field form.date_to layout="horizontal" %}
                     {% bootstrap_field form.location layout="horizontal" %}
                     {% bootstrap_field form.date_admission layout="horizontal" %}
+                    {% bootstrap_field form.frontpage_text layout="horizontal" %}
                 </fieldset>
                 <fieldset>
                     <legend>{% trans "Timeline" %}</legend>
