--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -117,7 +117,7 @@
                         {% blocktrans trimmed with time=ev.date_from|date:"TIME_FORMAT" %}
                             Begin: {{ time }}
                         {% endblocktrans %}
-                        {% if event.settings.show_end_date %}
+                        {% if event.settings.show_date_to %}
                             <br>
                             {% blocktrans trimmed with time=ev.date_to|date:"TIME_FORMAT" %}
                                 End: {{ time }}
