--- a/src/pretix/control/templates/pretixcontrol/event/payment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/payment.html
@@ -29,15 +29,12 @@
             {% for provider in providers %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-sm-10">
-                                <h3 class="panel-title">
-                                    <a data-toggle="collapse" href="#{{ provider.identifier }}">
-                                        {{ provider.verbose_name }}
-                                    </a>
-                                </h3>
-                            </div>
-                        </div>
+                        <h3 class="panel-title">
+                            <a class="collapsed" data-toggle="collapse" href="#{{ provider.identifier }}">
+                                {{ provider.verbose_name }}  
+                                <i class="fa fa-angle-down collapse-indicator"></i>
+                            </a>
+                        </h3>
                     </div>
                     <div id="{{ provider.identifier }}" class="panel-collapse collapse">
                         <div class="panel-body">
