--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -13,10 +13,11 @@
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#contact">
                             <strong>{% trans "Contact information" %}</strong>
+                            <i class="fa fa-angle-down collapse-indicator"></i>
                         </a>
                     </h4>
                 </div>
-                <div id="contact" class="panel-collapse collapsed in">
+                <div id="contact" class="panel-collapse collapse in">
                     <div class="panel-body">
                         {% bootstrap_form contact_form layout="horizontal" %}
                     </div>
@@ -26,15 +27,16 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#invoice">
-                                <strong>{% trans "Invoice information" %}</strong>
-                                {% if not event.settings.invoice_address_required %}
+                            <a class="{% if not event.settings.invoice_address_required %} collapsed {% endif %}" data-toggle="collapse" href="#invoice">
+                                <strong>{% trans "Invoice information" %}{% if not event.settings.invoice_address_required %}
                                     {% trans "(optional)" %}
-                                {% endif %}
+                                {% endif %}</strong>
+                                
+                                <i class="fa fa-angle-down collapse-indicator"></i>
                             </a>
                         </h4>
                     </div>
-                    <div id="invoice" class="panel-collapse collapsed {% if event.settings.invoice_address_required %} in {% endif %}">
+                    <div id="invoice" class="panel-collapse collapse {% if event.settings.invoice_address_required %} in {% endif %}">
                         <div class="panel-body">
                             {% bootstrap_form invoice_form layout="horizontal" %}
                         </div>
@@ -51,6 +53,7 @@
                                 {% if pos.variation %}
                                     – {{ pos.variation }}
                                 {% endif %}
+                                <i class="fa fa-angle-down collapse-indicator"></i>
                             </a>
                             {% if forloop.counter > 1 %}
                                 <span class="text-right pull-right">
@@ -60,7 +63,7 @@
                         </h4>
                     </div>
                     <div id="cp{{ pos.id }}"
-                            class="panel-collapse collapsed in">
+                            class="panel-collapse collapse in">
                         <div class="panel-body" data-idx="{{ forloop.counter0 }}">
                             {% for form in forms %}
                                 {% if form.pos.item != pos.item %}
