Improve "copy from above"

--- a/src/pretix/static/pretixpresale/scss/_forms.scss
+++ b/src/pretix/static/pretixpresale/scss/_forms.scss
@@ -16,6 +16,10 @@
   pointer-events: none;
 }
 
+.js-copy-answers {
+  margin-right: 10px;
+}
+
 .form-control.is-focused {
   @extend .form-control:focus;
 }
