--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -53,13 +53,15 @@
                                 {% if pos.variation %}
                                     – {{ pos.variation }}
                                 {% endif %}
-                                <i class="fa fa-angle-down collapse-indicator"></i>
+                                {% if forloop.counter > 1 %}
+                                    <span class="text-right">
+                                        <input type="button" data-id="{{ forloop.counter0 }}" name="copy" class="js-copy-answers btn btn-default btn-xs" value='{% trans "Copy answers from above" %}'>
+                                        <i class="fa fa-angle-down collapse-indicator"></i>
+                                    </span>
+                                {% else %}
+                                    <i class="fa fa-angle-down collapse-indicator"></i>
+                                {% endif %}
                             </a>
-                            {% if forloop.counter > 1 %}
-                                <span class="text-right pull-right">
-                                     <input type="button" data-id="{{ forloop.counter0 }}" name="copy" class="js-copy-answers btn btn-default btn-xs" value='{% trans "Copy answers from above" %}'>
-                                </span>
-                            {% endif %}
                         </h4>
                     </div>
                     <div id="cp{{ pos.id }}"
