Configurable invoice prefixes

--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -11,6 +11,7 @@
             {% bootstrap_field form.invoice_address_required layout="horizontal" %}
             {% bootstrap_field form.invoice_address_vatid layout="horizontal" %}
             {% bootstrap_field form.invoice_numbers_consecutive layout="horizontal" %}
+            {% bootstrap_field form.invoice_numbers_prefix layout="horizontal" %}
             {% bootstrap_field form.invoice_generate layout="horizontal" %}
             {% bootstrap_field form.invoice_renderer layout="horizontal" %}
             {% bootstrap_field form.invoice_language layout="horizontal" %}
