Link order from change pages, compat for old logs

--- a/src/pretix/control/templates/pretixcontrol/order/refund.html
+++ b/src/pretix/control/templates/pretixcontrol/order/refund.html
@@ -6,6 +6,12 @@
 {% block content %}
     <h1>
         {% trans "Refund order" %}
+        <a class="btn btn-link btn-lg"
+                href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+            {% blocktrans trimmed with order=order.code %}
+                Back to order {{ order }}
+            {% endblocktrans %}
+        </a>
     </h1>
     <p>{% blocktrans trimmed %}
         Do you really want to refund this order? You cannot revert this action.
