--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -9,6 +9,7 @@
             <legend>{% trans "Invoicing" %}</legend>
             {% bootstrap_field form.invoice_address_asked layout="horizontal" %}
             {% bootstrap_field form.invoice_address_required layout="horizontal" %}
+            {% bootstrap_field form.invoice_name_required layout="horizontal" %}
             {% bootstrap_field form.invoice_address_vatid layout="horizontal" %}
             {% bootstrap_field form.invoice_numbers_consecutive layout="horizontal" %}
             {% bootstrap_field form.invoice_numbers_prefix layout="horizontal" %}
